working on pagination response struct fields
